--- a/config/jobstxt.org.apache.conf
+++ b/config/jobstxt.org.apache.conf
@@ -5,8 +5,8 @@
 
     #SetEnv APPLICATION_ENV "production"
 
-    DocumentRoot /home/alister/web/jobstxt.org/public/
-    <Directory "/home/alister/web/jobstxt.org/public/">
+    DocumentRoot /home/alister/web/jobstxt.org/current/public
+    <Directory "/home/alister/web/jobstxt.org/current/public">
         Options Indexes FollowSymLinks MultiViews
         #AllowOverride None
         AllowOverride All
