dir paths and more jobs.txt contect. Going for some chuckles. Sorry Jay Hood Wright Park,NY, I picked you at random

--- a/config/jobstxt.org.apache.conf
+++ b/config/jobstxt.org.apache.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@jobstxt.org
     ServerName jobstxt.org
-    ServerAlias jobstxt.org
+    ServerAlias www.jobstxt.org *.jobstxt.org
 
     #SetEnv APPLICATION_ENV "production"
 
@@ -14,12 +14,12 @@
         allow from all
     </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/jobstxt.org..error.log
+    ErrorLog /var/log/apache2/jobstxt.org.error.log
 
     # Possible values include: debug, info, notice, warn, error, crit,
     # alert, emerg.
     LogLevel warn
 
-    CustomLog ${APACHE_LOG_DIR}/jobstxt.org.access.log combined
+    CustomLog /var/log/apache2/jobstxt.org.access.log combined
 
 </VirtualHost>
